--- a/app_chat/templates/video_rooms.html
+++ b/app_chat/templates/video_rooms.html
@@ -246,9 +246,7 @@ Conferences Manager
        <td>
            {{status}}
        </td>
-       <td>
-<a href="/communicate/video-rooms/{{id}}">Start</a> 
-
+       <td> <a href="/communicate/video-rooms/{{id}}">Start</a>
        </td>
        <td>
         <a href="javascript:void(0)" class="btn btn-sm btn-info link-participants" id="{{id}}">
