--- a/students/templates/students/course/detail.html
+++ b/students/templates/students/course/detail.html
@@ -346,7 +346,7 @@
 <script type="text/x-handlebars-template" id='roomListItemTemplate'>
     <li class="list-group-item d-flex justify-content-between align-items-center">
     {{title}}
-    <a href="/communicate/video-rooms/{{id}}" target="_blank" class="link-add-member badge badge-primary badge-pill text-white">Connect</a></li>
+    <a href="/communicate/video-rooms/{{id}}" class="link-add-member badge badge-primary badge-pill text-white">Connect</a></li>
 </script>
 {% endverbatim %}
 
